# pybind11_demo

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_and_run.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
demo/: main.py
include/: utils.h
src/: bindings.cpp  utils.cpp
tests/: test_basic.py
